--- a/galaxy/Dockerfile
+++ b/galaxy/Dockerfile
@@ -11,8 +11,8 @@ MAINTAINER Björn A. Grüning, bjoern.gruening@gmail.com
 # * Enable the @natefoo magic
 # Web server infrastructure matching usegalaxy.org - supervisor, uwsgi, and nginx.
 
-ENV GALAXY_RELEASE=dev \
-GALAXY_REPO=https://github.com/galaxyproject/galaxy \
+ENV GALAXY_RELEASE=workflow_labels_2 \
+GALAXY_REPO=https://github.com/jmchilton/galaxy \
 GALAXY_ROOT=/galaxy-central \
 GALAXY_CONFIG_DIR=/etc/galaxy
 
